fix: implements burger-menu on mobile view

--- a/src/components/Layout/Experience/Experience.css
+++ b/src/components/Layout/Experience/Experience.css
@@ -1,7 +1,8 @@
 .exp {
   width: 100%;
   height: 100%;
-  position: relative; 
+  position: relative;
+  container-type: inline-size;
 }
 
 .exp .content {
@@ -14,11 +15,40 @@
 
 .menu-btn-exp {
   padding:0 5px;
-  width: 5.5vw;
+  width: max-content;
   height: 95%;
   font-size: 1.6vh;
 }
-
+.exp-menu-title {
+  display: flex;
+}
+.hamburger-exp {
+    display: none;
+}
+@container (max-width: 800px) {
+    .hamburger-exp {
+        display: inline;
+        display: flex;
+        align-items: center;
+    }
+    .exp-menu-title{
+        display: none;
+    }
+    .exp-menu-title.open {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        top:45px;
+        width: 33%;
+        background-color: black;
+    }
+    .hamburger-exp img{
+        width: 20px;
+        margin-left: 10px;
+        filter: invert(100%);
+    }
+}
 .select-items-proj {
   list-style-type: none;
   display: flex;
