--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -27,6 +27,8 @@
   overflow: hidden;
   touch-action: none;
   user-select: none;
+
+border: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 
